--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,16 @@
 @import "reset";
-@import "fonts";
 @import "variables";
+@import "sprite";
+@import "sprite-retina";
 @import "custom";
-
+@import "bootstrap";
+@import "owl.carousel.css";
 @import "header";
+
+@import "content-1";
+@import "content-2";
+@import "content-3";
+@import "content-4";
+@import "content-5";
 
 @import "footer";
