--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,54 @@
 /*==============================
 =            FOOTER            =
 ==============================*/
-
+.site-footer {
+	background-color: #403d3d;
+	color: #fff;
+	&__top {
+		padding: 80px 0 86px;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+	&__left {
+	}
+	&__logo {
+		margin-top: 30px;
+		display: block;
+		.sprite(@logo-footer);
+	}
+	&__title {
+		width: 100%;
+	}
+	&__text {
+		font: 300 20px/34px 'Muli';
+		margin-top: 56px;
+	}
+	&__btn {
+		margin-top: 48px;
+		border-color: #fff;
+		color: #fff;
+	}
+	&__center {
+	}
+	&__right {
+	}
+	&__bottom {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		min-height: 86px;
+		align-items: center;
+	}
+	&__copyright,
+	&__created {
+		font: 300 20px/50px 'Muli';
+		text-transform: uppercase;
+	}
+	&__anchor {
+		display: block;
+		.sprite(@anchor);
+	}
+}
 /*-----  End of FOOTER  ------*/
 
