--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,11 @@
 @wrapper: 1200px;
 
-// Fonts
-
 
 // Colors
 @brand: #000;
+@black: #1a1a1a;
+@brown: #231f20;
+@brown-light: #af9476;
 
 //Media Queries
 @mobile:      ~"only screen and (min-width : 320px) and (max-width : 766px)";
