--- a/less/sprite-retina.less
+++ b/less/sprite-retina.less
@@ -19,9 +19,9 @@ At the bottom of this section, we provide information about the spritesheet itse
 @anchor-2x-width: 70px;
 @anchor-2x-height: 68px;
 @anchor-2x-total-width: 1526px;
-@anchor-2x-total-height: 802px;
+@anchor-2x-total-height: 930px;
 @anchor-2x-image: '../img/sprite-retina.png';
-@anchor-2x: 1386px 414px -1386px -414px 70px 68px 1526px 802px '../img/sprite-retina.png' anchor-2x;
+@anchor-2x: 1386px 414px -1386px -414px 70px 68px 1526px 930px '../img/sprite-retina.png' anchor-2x;
 @arrow-2x-name: arrow-2x;
 @arrow-2x-x: 550px;
 @arrow-2x-y: 502px;
@@ -30,31 +30,31 @@ At the bottom of this section, we provide information about the spritesheet itse
 @arrow-2x-width: 548px;
 @arrow-2x-height: 40px;
 @arrow-2x-total-width: 1526px;
-@arrow-2x-total-height: 802px;
+@arrow-2x-total-height: 930px;
 @arrow-2x-image: '../img/sprite-retina.png';
-@arrow-2x: 550px 502px -550px -502px 548px 40px 1526px 802px '../img/sprite-retina.png' arrow-2x;
+@arrow-2x: 550px 502px -550px -502px 548px 40px 1526px 930px '../img/sprite-retina.png' arrow-2x;
 @blockquote-2x-name: blockquote-2x;
-@blockquote-2x-x: 98px;
-@blockquote-2x-y: 580px;
-@blockquote-2x-offset-x: -98px;
-@blockquote-2x-offset-y: -580px;
+@blockquote-2x-x: 520px;
+@blockquote-2x-y: 638px;
+@blockquote-2x-offset-x: -520px;
+@blockquote-2x-offset-y: -638px;
 @blockquote-2x-width: 76px;
 @blockquote-2x-height: 62px;
 @blockquote-2x-total-width: 1526px;
-@blockquote-2x-total-height: 802px;
+@blockquote-2x-total-height: 930px;
 @blockquote-2x-image: '../img/sprite-retina.png';
-@blockquote-2x: 98px 580px -98px -580px 76px 62px 1526px 802px '../img/sprite-retina.png' blockquote-2x;
+@blockquote-2x: 520px 638px -520px -638px 76px 62px 1526px 930px '../img/sprite-retina.png' blockquote-2x;
 @facebook-2x-name: facebook-2x;
 @facebook-2x-x: 0px;
-@facebook-2x-y: 688px;
+@facebook-2x-y: 816px;
 @facebook-2x-offset-x: 0px;
-@facebook-2x-offset-y: -688px;
+@facebook-2x-offset-y: -816px;
 @facebook-2x-width: 60px;
 @facebook-2x-height: 114px;
 @facebook-2x-total-width: 1526px;
-@facebook-2x-total-height: 802px;
+@facebook-2x-total-height: 930px;
 @facebook-2x-image: '../img/sprite-retina.png';
-@facebook-2x: 0px 688px 0px -688px 60px 114px 1526px 802px '../img/sprite-retina.png' facebook-2x;
+@facebook-2x: 0px 816px 0px -816px 60px 114px 1526px 930px '../img/sprite-retina.png' facebook-2x;
 @logo-2x-name: logo-2x;
 @logo-2x-x: 0px;
 @logo-2x-y: 0px;
@@ -63,9 +63,9 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-2x-width: 836px;
 @logo-2x-height: 502px;
 @logo-2x-total-width: 1526px;
-@logo-2x-total-height: 802px;
+@logo-2x-total-height: 930px;
 @logo-2x-image: '../img/sprite-retina.png';
-@logo-2x: 0px 0px 0px 0px 836px 502px 1526px 802px '../img/sprite-retina.png' logo-2x;
+@logo-2x: 0px 0px 0px 0px 836px 502px 1526px 930px '../img/sprite-retina.png' logo-2x;
 @logo-footer-2x-name: logo-footer-2x;
 @logo-footer-2x-x: 836px;
 @logo-footer-2x-y: 0px;
@@ -74,58 +74,113 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-footer-2x-width: 690px;
 @logo-footer-2x-height: 414px;
 @logo-footer-2x-total-width: 1526px;
-@logo-footer-2x-total-height: 802px;
+@logo-footer-2x-total-height: 930px;
 @logo-footer-2x-image: '../img/sprite-retina.png';
-@logo-footer-2x: 836px 0px -836px 0px 690px 414px 1526px 802px '../img/sprite-retina.png' logo-footer-2x;
+@logo-footer-2x: 836px 0px -836px 0px 690px 414px 1526px 930px '../img/sprite-retina.png' logo-footer-2x;
 @logo-menu-2x-name: logo-menu-2x;
-@logo-menu-2x-x: 836px;
-@logo-menu-2x-y: 414px;
-@logo-menu-2x-offset-x: -836px;
-@logo-menu-2x-offset-y: -414px;
+@logo-menu-2x-x: 0px;
+@logo-menu-2x-y: 502px;
+@logo-menu-2x-offset-x: 0px;
+@logo-menu-2x-offset-y: -502px;
 @logo-menu-2x-width: 550px;
 @logo-menu-2x-height: 78px;
 @logo-menu-2x-total-width: 1526px;
-@logo-menu-2x-total-height: 802px;
+@logo-menu-2x-total-height: 930px;
 @logo-menu-2x-image: '../img/sprite-retina.png';
-@logo-menu-2x: 836px 414px -836px -414px 550px 78px 1526px 802px '../img/sprite-retina.png' logo-menu-2x;
+@logo-menu-2x: 0px 502px 0px -502px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-menu-2x;
 @logo-nav-2x-name: logo-nav-2x;
-@logo-nav-2x-x: 0px;
-@logo-nav-2x-y: 502px;
-@logo-nav-2x-offset-x: 0px;
-@logo-nav-2x-offset-y: -502px;
+@logo-nav-2x-x: 836px;
+@logo-nav-2x-y: 414px;
+@logo-nav-2x-offset-x: -836px;
+@logo-nav-2x-offset-y: -414px;
 @logo-nav-2x-width: 550px;
 @logo-nav-2x-height: 78px;
 @logo-nav-2x-total-width: 1526px;
-@logo-nav-2x-total-height: 802px;
+@logo-nav-2x-total-height: 930px;
 @logo-nav-2x-image: '../img/sprite-retina.png';
-@logo-nav-2x: 0px 502px 0px -502px 550px 78px 1526px 802px '../img/sprite-retina.png' logo-nav-2x;
+@logo-nav-2x: 836px 414px -836px -414px 550px 78px 1526px 930px '../img/sprite-retina.png' logo-nav-2x;
 @logo2-2x-name: logo2-2x;
 @logo2-2x-x: 0px;
-@logo2-2x-y: 580px;
+@logo2-2x-y: 708px;
 @logo2-2x-offset-x: 0px;
-@logo2-2x-offset-y: -580px;
+@logo2-2x-offset-y: -708px;
 @logo2-2x-width: 98px;
 @logo2-2x-height: 108px;
 @logo2-2x-total-width: 1526px;
-@logo2-2x-total-height: 802px;
+@logo2-2x-total-height: 930px;
 @logo2-2x-image: '../img/sprite-retina.png';
-@logo2-2x: 0px 580px 0px -580px 98px 108px 1526px 802px '../img/sprite-retina.png' logo2-2x;
+@logo2-2x: 0px 708px 0px -708px 98px 108px 1526px 930px '../img/sprite-retina.png' logo2-2x;
+@portfolio-arrow-2x-name: portfolio-arrow-2x;
+@portfolio-arrow-2x-x: 520px;
+@portfolio-arrow-2x-y: 580px;
+@portfolio-arrow-2x-offset-x: -520px;
+@portfolio-arrow-2x-offset-y: -580px;
+@portfolio-arrow-2x-width: 210px;
+@portfolio-arrow-2x-height: 58px;
+@portfolio-arrow-2x-total-width: 1526px;
+@portfolio-arrow-2x-total-height: 930px;
+@portfolio-arrow-2x-image: '../img/sprite-retina.png';
+@portfolio-arrow-2x: 520px 580px -520px -580px 210px 58px 1526px 930px '../img/sprite-retina.png' portfolio-arrow-2x;
 @prev-2x-name: prev-2x;
-@prev-2x-x: 60px;
-@prev-2x-y: 688px;
-@prev-2x-offset-x: -60px;
-@prev-2x-offset-y: -688px;
+@prev-2x-x: 98px;
+@prev-2x-y: 708px;
+@prev-2x-offset-x: -98px;
+@prev-2x-offset-y: -708px;
 @prev-2x-width: 42px;
 @prev-2x-height: 70px;
 @prev-2x-total-width: 1526px;
-@prev-2x-total-height: 802px;
+@prev-2x-total-height: 930px;
 @prev-2x-image: '../img/sprite-retina.png';
-@prev-2x: 60px 688px -60px -688px 42px 70px 1526px 802px '../img/sprite-retina.png' prev-2x;
+@prev-2x: 98px 708px -98px -708px 42px 70px 1526px 930px '../img/sprite-retina.png' prev-2x;
+@sidebar-email-2x-name: sidebar__email-2x;
+@sidebar-email-2x-x: 390px;
+@sidebar-email-2x-y: 580px;
+@sidebar-email-2x-offset-x: -390px;
+@sidebar-email-2x-offset-y: -580px;
+@sidebar-email-2x-width: 130px;
+@sidebar-email-2x-height: 128px;
+@sidebar-email-2x-total-width: 1526px;
+@sidebar-email-2x-total-height: 930px;
+@sidebar-email-2x-image: '../img/sprite-retina.png';
+@sidebar-email-2x: 390px 580px -390px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__email-2x;
+@sidebar-facebook-2x-name: sidebar__facebook-2x;
+@sidebar-facebook-2x-x: 130px;
+@sidebar-facebook-2x-y: 580px;
+@sidebar-facebook-2x-offset-x: -130px;
+@sidebar-facebook-2x-offset-y: -580px;
+@sidebar-facebook-2x-width: 130px;
+@sidebar-facebook-2x-height: 128px;
+@sidebar-facebook-2x-total-width: 1526px;
+@sidebar-facebook-2x-total-height: 930px;
+@sidebar-facebook-2x-image: '../img/sprite-retina.png';
+@sidebar-facebook-2x: 130px 580px -130px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__facebook-2x;
+@sidebar-instagram-2x-name: sidebar__instagram-2x;
+@sidebar-instagram-2x-x: 0px;
+@sidebar-instagram-2x-y: 580px;
+@sidebar-instagram-2x-offset-x: 0px;
+@sidebar-instagram-2x-offset-y: -580px;
+@sidebar-instagram-2x-width: 130px;
+@sidebar-instagram-2x-height: 128px;
+@sidebar-instagram-2x-total-width: 1526px;
+@sidebar-instagram-2x-total-height: 930px;
+@sidebar-instagram-2x-image: '../img/sprite-retina.png';
+@sidebar-instagram-2x: 0px 580px 0px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__instagram-2x;
+@sidebar-pinterest-2x-name: sidebar__pinterest-2x;
+@sidebar-pinterest-2x-x: 260px;
+@sidebar-pinterest-2x-y: 580px;
+@sidebar-pinterest-2x-offset-x: -260px;
+@sidebar-pinterest-2x-offset-y: -580px;
+@sidebar-pinterest-2x-width: 130px;
+@sidebar-pinterest-2x-height: 128px;
+@sidebar-pinterest-2x-total-width: 1526px;
+@sidebar-pinterest-2x-total-height: 930px;
+@sidebar-pinterest-2x-image: '../img/sprite-retina.png';
+@sidebar-pinterest-2x: 260px 580px -260px -580px 130px 128px 1526px 930px '../img/sprite-retina.png' sidebar__pinterest-2x;
 @spritesheet-width: 1526px;
-@spritesheet-height: 802px;
+@spritesheet-height: 930px;
 @spritesheet-image: '../img/sprite-retina.png';
-@spritesheet-sprites: @anchor-2x @arrow-2x @blockquote-2x @facebook-2x @logo-2x @logo-footer-2x @logo-menu-2x @logo-nav-2x @logo2-2x @prev-2x;
-@spritesheet: 1526px 802px '../img/sprite-retina.png' @spritesheet-sprites;
+@spritesheet-sprites: @anchor-2x @arrow-2x @blockquote-2x @facebook-2x @logo-2x @logo-footer-2x @logo-menu-2x @logo-nav-2x @logo2-2x @portfolio-arrow-2x @prev-2x @sidebar-email-2x @sidebar-facebook-2x @sidebar-instagram-2x @sidebar-pinterest-2x;
+@spritesheet: 1526px 930px '../img/sprite-retina.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
