--- a/less/sprite.less
+++ b/less/sprite.less
@@ -19,9 +19,9 @@ At the bottom of this section, we provide information about the spritesheet itse
 @anchor-width: 35px;
 @anchor-height: 34px;
 @anchor-total-width: 763px;
-@anchor-total-height: 382px;
+@anchor-total-height: 446px;
 @anchor-image: '../img/sprite.png';
-@anchor: 693px 207px -693px -207px 35px 34px 763px 382px '../img/sprite.png' anchor;
+@anchor: 693px 207px -693px -207px 35px 34px 763px 446px '../img/sprite.png' anchor;
 @arrow-name: arrow;
 @arrow-x: 0px;
 @arrow-y: 251px;
@@ -30,31 +30,31 @@ At the bottom of this section, we provide information about the spritesheet itse
 @arrow-width: 274px;
 @arrow-height: 20px;
 @arrow-total-width: 763px;
-@arrow-total-height: 382px;
+@arrow-total-height: 446px;
 @arrow-image: '../img/sprite.png';
-@arrow: 0px 251px 0px -251px 274px 20px 763px 382px '../img/sprite.png' arrow;
+@arrow: 0px 251px 0px -251px 274px 20px 763px 446px '../img/sprite.png' arrow;
 @blockquote-name: blockquote;
-@blockquote-x: 49px;
-@blockquote-y: 271px;
-@blockquote-offset-x: -49px;
-@blockquote-offset-y: -271px;
+@blockquote-x: 260px;
+@blockquote-y: 300px;
+@blockquote-offset-x: -260px;
+@blockquote-offset-y: -300px;
 @blockquote-width: 38px;
 @blockquote-height: 31px;
 @blockquote-total-width: 763px;
-@blockquote-total-height: 382px;
+@blockquote-total-height: 446px;
 @blockquote-image: '../img/sprite.png';
-@blockquote: 49px 271px -49px -271px 38px 31px 763px 382px '../img/sprite.png' blockquote;
+@blockquote: 260px 300px -260px -300px 38px 31px 763px 446px '../img/sprite.png' blockquote;
 @facebook-name: facebook;
 @facebook-x: 0px;
-@facebook-y: 325px;
+@facebook-y: 389px;
 @facebook-offset-x: 0px;
-@facebook-offset-y: -325px;
+@facebook-offset-y: -389px;
 @facebook-width: 30px;
 @facebook-height: 57px;
 @facebook-total-width: 763px;
-@facebook-total-height: 382px;
+@facebook-total-height: 446px;
 @facebook-image: '../img/sprite.png';
-@facebook: 0px 325px 0px -325px 30px 57px 763px 382px '../img/sprite.png' facebook;
+@facebook: 0px 389px 0px -389px 30px 57px 763px 446px '../img/sprite.png' facebook;
 @logo-footer-name: logo-footer;
 @logo-footer-x: 418px;
 @logo-footer-y: 0px;
@@ -63,9 +63,9 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-footer-width: 345px;
 @logo-footer-height: 207px;
 @logo-footer-total-width: 763px;
-@logo-footer-total-height: 382px;
+@logo-footer-total-height: 446px;
 @logo-footer-image: '../img/sprite.png';
-@logo-footer: 418px 0px -418px 0px 345px 207px 763px 382px '../img/sprite.png' logo-footer;
+@logo-footer: 418px 0px -418px 0px 345px 207px 763px 446px '../img/sprite.png' logo-footer;
 @logo-nav-name: logo-nav;
 @logo-nav-x: 418px;
 @logo-nav-y: 207px;
@@ -74,9 +74,9 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-nav-width: 275px;
 @logo-nav-height: 39px;
 @logo-nav-total-width: 763px;
-@logo-nav-total-height: 382px;
+@logo-nav-total-height: 446px;
 @logo-nav-image: '../img/sprite.png';
-@logo-nav: 418px 207px -418px -207px 275px 39px 763px 382px '../img/sprite.png' logo-nav;
+@logo-nav: 418px 207px -418px -207px 275px 39px 763px 446px '../img/sprite.png' logo-nav;
 @logo-name: logo;
 @logo-x: 0px;
 @logo-y: 0px;
@@ -85,36 +85,102 @@ At the bottom of this section, we provide information about the spritesheet itse
 @logo-width: 418px;
 @logo-height: 251px;
 @logo-total-width: 763px;
-@logo-total-height: 382px;
+@logo-total-height: 446px;
 @logo-image: '../img/sprite.png';
-@logo: 0px 0px 0px 0px 418px 251px 763px 382px '../img/sprite.png' logo;
+@logo: 0px 0px 0px 0px 418px 251px 763px 446px '../img/sprite.png' logo;
 @logo2-name: logo2;
 @logo2-x: 0px;
-@logo2-y: 271px;
+@logo2-y: 335px;
 @logo2-offset-x: 0px;
-@logo2-offset-y: -271px;
+@logo2-offset-y: -335px;
 @logo2-width: 49px;
 @logo2-height: 54px;
 @logo2-total-width: 763px;
-@logo2-total-height: 382px;
+@logo2-total-height: 446px;
 @logo2-image: '../img/sprite.png';
-@logo2: 0px 271px 0px -271px 49px 54px 763px 382px '../img/sprite.png' logo2;
+@logo2: 0px 335px 0px -335px 49px 54px 763px 446px '../img/sprite.png' logo2;
+@portfolio-arrow-name: portfolio-arrow;
+@portfolio-arrow-x: 260px;
+@portfolio-arrow-y: 271px;
+@portfolio-arrow-offset-x: -260px;
+@portfolio-arrow-offset-y: -271px;
+@portfolio-arrow-width: 105px;
+@portfolio-arrow-height: 29px;
+@portfolio-arrow-total-width: 763px;
+@portfolio-arrow-total-height: 446px;
+@portfolio-arrow-image: '../img/sprite.png';
+@portfolio-arrow: 260px 271px -260px -271px 105px 29px 763px 446px '../img/sprite.png' portfolio-arrow;
 @prev-name: prev;
-@prev-x: 30px;
-@prev-y: 325px;
-@prev-offset-x: -30px;
-@prev-offset-y: -325px;
+@prev-x: 73px;
+@prev-y: 335px;
+@prev-offset-x: -73px;
+@prev-offset-y: -335px;
 @prev-width: 21px;
 @prev-height: 35px;
 @prev-total-width: 763px;
-@prev-total-height: 382px;
+@prev-total-height: 446px;
 @prev-image: '../img/sprite.png';
-@prev: 30px 325px -30px -325px 21px 35px 763px 382px '../img/sprite.png' prev;
+@prev: 73px 335px -73px -335px 21px 35px 763px 446px '../img/sprite.png' prev;
+@sidebar-category-name: sidebar-category;
+@sidebar-category-x: 49px;
+@sidebar-category-y: 335px;
+@sidebar-category-offset-x: -49px;
+@sidebar-category-offset-y: -335px;
+@sidebar-category-width: 24px;
+@sidebar-category-height: 36px;
+@sidebar-category-total-width: 763px;
+@sidebar-category-total-height: 446px;
+@sidebar-category-image: '../img/sprite.png';
+@sidebar-category: 49px 335px -49px -335px 24px 36px 763px 446px '../img/sprite.png' sidebar-category;
+@sidebar-email-name: sidebar__email;
+@sidebar-email-x: 195px;
+@sidebar-email-y: 271px;
+@sidebar-email-offset-x: -195px;
+@sidebar-email-offset-y: -271px;
+@sidebar-email-width: 65px;
+@sidebar-email-height: 64px;
+@sidebar-email-total-width: 763px;
+@sidebar-email-total-height: 446px;
+@sidebar-email-image: '../img/sprite.png';
+@sidebar-email: 195px 271px -195px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__email;
+@sidebar-facebook-name: sidebar__facebook;
+@sidebar-facebook-x: 130px;
+@sidebar-facebook-y: 271px;
+@sidebar-facebook-offset-x: -130px;
+@sidebar-facebook-offset-y: -271px;
+@sidebar-facebook-width: 65px;
+@sidebar-facebook-height: 64px;
+@sidebar-facebook-total-width: 763px;
+@sidebar-facebook-total-height: 446px;
+@sidebar-facebook-image: '../img/sprite.png';
+@sidebar-facebook: 130px 271px -130px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__facebook;
+@sidebar-instagram-name: sidebar__instagram;
+@sidebar-instagram-x: 65px;
+@sidebar-instagram-y: 271px;
+@sidebar-instagram-offset-x: -65px;
+@sidebar-instagram-offset-y: -271px;
+@sidebar-instagram-width: 65px;
+@sidebar-instagram-height: 64px;
+@sidebar-instagram-total-width: 763px;
+@sidebar-instagram-total-height: 446px;
+@sidebar-instagram-image: '../img/sprite.png';
+@sidebar-instagram: 65px 271px -65px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__instagram;
+@sidebar-pinterest-name: sidebar__pinterest;
+@sidebar-pinterest-x: 0px;
+@sidebar-pinterest-y: 271px;
+@sidebar-pinterest-offset-x: 0px;
+@sidebar-pinterest-offset-y: -271px;
+@sidebar-pinterest-width: 65px;
+@sidebar-pinterest-height: 64px;
+@sidebar-pinterest-total-width: 763px;
+@sidebar-pinterest-total-height: 446px;
+@sidebar-pinterest-image: '../img/sprite.png';
+@sidebar-pinterest: 0px 271px 0px -271px 65px 64px 763px 446px '../img/sprite.png' sidebar__pinterest;
 @spritesheet-width: 763px;
-@spritesheet-height: 382px;
+@spritesheet-height: 446px;
 @spritesheet-image: '../img/sprite.png';
-@spritesheet-sprites: @anchor @arrow @blockquote @facebook @logo-footer @logo-nav @logo @logo2 @prev;
-@spritesheet: 763px 382px '../img/sprite.png' @spritesheet-sprites;
+@spritesheet-sprites: @anchor @arrow @blockquote @facebook @logo-footer @logo-nav @logo @logo2 @portfolio-arrow @prev @sidebar-category @sidebar-email @sidebar-facebook @sidebar-instagram @sidebar-pinterest;
+@spritesheet: 763px 446px '../img/sprite.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
