--- a/less/style.less
+++ b/less/style.less
@@ -13,4 +13,11 @@
 @import "content-4";
 @import "content-5";
 
+@import "portfolio";
+@import "aboutus";
+@import "blog";
+@import "sidebar";
+@import "single";
+@import "investment";
+
 @import "footer";
